
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.1-rc1
====================================
- [#MODX-2295] Ensure menuindex can be overridden in resource creation if auto_menuindex is set to true
- Fixes to resource panels to adjust widths, loading of values properly
- [#MODX-2318] Fixes to TVs in Resource pages to make order sorting work correctly
- Abstracted setup database methods to driver-specific structures to accomodate for various future db drivers
- [#MODX-2241] Added archive_with setting so users with improper ZipArchive compiles can switch back to PCLZip
- Updated xPDO to include sqlite drivers
- [#MODX-2308] Added UUID to all modx installs for usage in extras, custom providers, stats tracking, etc
- [#MODX-2303] Fixed issue where resource editing pages were not respecting context settings
- [#MODX-2302] Fixed issue with loading of input option values in TV related to optimizations in 2.0.1
- [#MODX-2297] Fixed output filters limit/ellipsis when dealing with special character cases
- [#MODX-2290] Added image preview when hovering over images in file tree
- Added extra sanity checks in Package Management in case transport zips are not extracted
- Make package grid update available Yes clickable to update
- Cleaned up and better abstracted modRestClient and modRestCurlClient code
- Fixed bug in setup during upgrade-advanced where DB information was not being checked correctly
- Lots of improvements to handling and caching of thumbnails in manager
- Fixed bug where reset filter on settings grid was not resetting to core namespace
- [#MODX-2178] Added missing settings and lexicon values for those settings to build/lexicons
- [#MODX-2179] Lexicons in Setup now use placeholders rather than sprintf for better i18n support