@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.1-rc1
 ====================================
+- [#MODX-2309] Ensure upload files button always uses the active node as the path, or if it is a file, its parent directory
 - [#MODX-2295] Ensure menuindex can be overridden in resource creation if auto_menuindex is set to true
 - Fixes to resource panels to adjust widths, loading of values properly
 - [#MODX-2318] Fixes to TVs in Resource pages to make order sorting work correctly
